Add calculator logic and Add calculator visual

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             
             <button id="button0">0</button>
             <button id="button-decimal">.</button>
-            <button id="button-clear">X</button>
+            <button id="button-delete">X</button>
             <button id="button-result">=</button> 
         </div>
     </div>
